<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:padding="@dimen/_2sdp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/set_location"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>

        <com.popwoot.carouselbanner.CoolCarouselBanner
            android:id="@+id/banner"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:autoPlaying="true"
            app:indicatorGravity="center"
            app:orientation="horizontal"
            app:speedPerPixelMillisecond="0.8" />


        <TextView
            android:visibility="gone"
            android:id="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:textAlignment="textStart"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/our_projects"
            android:textColor="#969595"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


</androidx.constraintlayout.widget.ConstraintLayout>

